--- a/app/views/assignment_results/_assignment_result_list_item.html.erb
+++ b/app/views/assignment_results/_assignment_result_list_item.html.erb
@@ -1,26 +1,28 @@
-<div class="resource">
+<div class="resource vertical-li">
+
+  <% if can_edit? %>
+    <span class="edit-toggle">
+	  <%= form_for(assignment_result, method: :get,
+        url: edit_assignment_result_path(assignment_result),
+        html: {class: "inline"}) do |f| %>
+        <button type="submit" class="btn btn-link btn-sm" data-toggle="tooltip" title="Edit">
+          <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+        </button>
+      <% end %>
+      <%= form_for(assignment_result, method: :delete,
+          url: assignment_result_path(assignment_result), 
+          html: {class: "inline"}) do |f| %>
+        <button type="submit" class="btn btn-link btn-sm" data-toggle="tooltip" title="Delete">
+          <span class="glyphicon glyphicon-remove x-btn" aria-hidden="true"></span> 
+        </button>
+      <% end %>
+    </span>
+  <% end %>
+  
   <span class="name"><%=
     "#{assignment_result.course_title} (#{assignment_result.instructor}, #{assignment_result.semester})"
   %></span>
 
   (<%= link_to "details", assignment_result_path(assignment_result) %>)
 
-  <% if can_edit? %>
-    <span class="edit-toggle">
-      <%= form_for(assignment_result, method: :delete,
-          url: assignment_result_path(assignment_result), 
-          html: {class: "inline"}) do |f| %>
-        <button type="submit" class="btn btn-default btn-sm">
-          <span class="glyphicon glyphicon-trash" aria-hidden="true"></span> 
-          Delete</button>
-      <% end %>
-      <%= form_for(assignment_result, method: :get,
-        url: edit_assignment_result_path(assignment_result),
-        html: {class: "inline"}) do |f| %>
-        <button type="submit" class="btn btn-default btn-sm">
-          <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> Edit
-      </button>
-      <% end %>
-    </span>
-  <% end %>
 </li>
