--- a/app/views/assignments/show.html.erb
+++ b/app/views/assignments/show.html.erb
@@ -29,8 +29,8 @@
 	  <% if can_edit? %>
 		<span class="edit-toggle">
 		  <a href="<%= new_vertical_tag_path @assignment %>">
-			<button class="btn btn-sm btn-link" data-toggle="tooltip" title="Edit Tags">
-			  <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+			<button class="btn btn-sm btn-link" data-toggle="tooltip" title="Add Tags">
+			  <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
 			</button>
 		  </a>
 		  <!-- MERGE THIS PAGE INTO THE FIRST ONE
