--- a/app/views/tags/_tag.html.erb
+++ b/app/views/tags/_tag.html.erb
@@ -6,16 +6,16 @@
       <%= form_for(tag, method: :delete,
           url: vertical_tag_path(vertical, tag), 
           html: {class: "inline"}) do |f| %>
-        <button type="submit" class="btn btn-default btn-sm">
-          <span class="glyphicon glyphicon-trash" aria-hidden="true"></span> 
-          Disassociate</button>
+        <button type="submit" class="btn btn-link btn-sm" data-toggle="tooltip" title="Disassociate">
+          <span class="glyphicon glyphicon-remove x-btn" aria-hidden="true"></span> 
+        </button>
       <% end %>
       <%= form_for(tag, method: :get,
          url: edit_vertical_tag_path(vertical, tag),
          html: {class: "inline"}) do |f| %>
-        <button type="submit" class="btn btn-default btn-sm">
-          <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> Edit
-      </button>
+        <button type="submit" class="btn btn-link btn-sm" data-toggle="tooltip" title="Edit">
+          <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> 
+        </button>
       <% end %>
     <% end %>
   </h3>
