--- a/app/views/tags/show.html.erb
+++ b/app/views/tags/show.html.erb
@@ -3,8 +3,8 @@
   <h1><span class="name"><%= @tag.text %></span>
     <% if can_edit? %>
       <%= link_to edit_tag_path(@tag)  do %>
-        <button type="button" class="btn btn-default btn-md">
-          <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> Edit
+        <button type="submit" class="btn btn-link btn-sm" data-toggle="tooltip" title="Edit">
+          <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> 
         </button>
       <% end %>
     <% end %>
